валидатор, picturefill, правки небольшие

--- a/source/index.html
+++ b/source/index.html
@@ -64,6 +64,7 @@
                           <svg class="app-save__icon-android" width="43" height="48">
                             <use xlink:href="img/sprite.svg#icon-android"></use>
                           </svg>
+                        </a>
                       </li>
                       <li class="app-save__item">
                         <a class="app-save__link">
@@ -89,22 +90,22 @@
                       <div class="advantages__wrapper-main-mobile">
                         <ul class="advantages__list-mobile">
                           <li class="advantages__item-mobile">
-                            <h3 class="advantages__title-mobile">Поднимает настроение</h2>
+                            <h3 class="advantages__title-mobile">Поднимает настроение</h3>
                             <p class="advantages__description-mobile">Приложение позволит вам победить осеннюю хандру и депрессию буквально в несколько кликов!</p>
                           </li>
                           <li class="advantages__item-mobile">
-                            <h3 class="advantages__title-mobile">Меняет мир вокруг</h2>
+                            <h3 class="advantages__title-mobile">Меняет мир вокруг</h3>
                             <p class="advantages__description-mobile">Сделайте снимок и украсьте его смайликом или текстовой подписью, чтобы усилить эффект</p>
                           </li>
                           <li class="advantages__item-mobile">
-                            <h3 class="advantages__title-mobile">Заводит новых друзей</h2>
+                            <h3 class="advantages__title-mobile">Заводит новых друзей</h3>
                             <p class="advantages__description-mobile">Ставьте лайки, комментируйте, делитесь фотографиями с друзьями и заводите новых</p>
                           </li>
                         </ul>
                         <div class="advantages__img-align">
                             <picture>
                               <source type="image/webp" media="(min-width: 1200px)" srcset="img/iphone-screen-mobile@1x.webp 1x, img/iphone-screen-mobile@2x.webp 2x">
-                              <img class="advantages__img-mobile" src="img/iphone-screen-mobile@1x.png" srcset="img/iphone-screen-mobile@2x.png 2x">
+                              <img class="advantages__img-mobile" src="img/iphone-screen-mobile@1x.png" srcset="img/iphone-screen-mobile@2x.png 2x" alt="фото телефона">
                             </picture>
                         </div>
                       </div>
@@ -115,7 +116,7 @@
                         <li class="advantages__item-desktop">
                             <picture>
                               <source type="image/webp" media="(min-width: 1200px)" srcset="img/iphone-screen-1-desktop@1x.webp 1x, img/iphone-screen-1-desktop@2x.webp 2x">
-                              <img class="advantages__img-desktop" src="img/iphone-screen-1-desktop@1x.png" srcset="img/iphone-screen-1-desktop@2x.png 2x">
+                              <img class="advantages__img-desktop" src="img/iphone-screen-1-desktop@1x.png" srcset="img/iphone-screen-1-desktop@2x.png 2x" alt="фото телефона">
                             </picture>
                           <p class="advantages__title-desktop">Поднимает настроение</p>
                           <p class="advantages__description-desktop">Приложение позволит вам победить осеннюю хандру и депрессию буквально в несколько кликов!</p>
@@ -123,7 +124,7 @@
                         <li class="advantages__item-desktop">
                             <picture>
                               <source type="image/webp" media="(min-width: 1200px)" srcset="img/iphone-screen-2-desktop@1x.webp 1x, img/iphone-screen-2-desktop@2x.webp 2x">
-                              <img class="advantages__img-desktop" src="img/iphone-screen-2-desktop@1x.png" srcset="img/iphone-screen-2-desktop@2x.png 2x">
+                              <img class="advantages__img-desktop" src="img/iphone-screen-2-desktop@1x.png" srcset="img/iphone-screen-2-desktop@2x.png 2x" alt="фото телефона">
                             </picture>
                           <p class="advantages__title-desktop">Меняет мир вокруг</p>
                           <p class="advantages__description-desktop">Сделайте снимок и украсьте его смайликом или текстовой подписью, чтобы усилить эффект</p>
@@ -131,7 +132,7 @@
                         <li class="advantages__item-desktop">
                             <picture>
                               <source type="image/webp" media="(min-width: 1200px)" srcset="img/iphone-screen-3-desktop@1x.webp 1x, img/iphone-screen-3-desktop@2x.webp 2x">
-                              <img class="advantages__img-desktop" src="img/iphone-screen-3-desktop@1x.png" srcset="img/iphone-screen-3-desktop@2x.png 2x">
+                              <img class="advantages__img-desktop" src="img/iphone-screen-3-desktop@1x.png" srcset="img/iphone-screen-3-desktop@2x.png 2x" alt="фото телефона">
                             </picture>
                           <p class="advantages__title-desktop">Заводит новых друзей</p>
                           <p class="advantages__description-desktop">Ставьте лайки, комментируйте, делитесь фотографиями с друзьями и заводите новых</p>
@@ -170,9 +171,9 @@
                       <p class="reviews__users-job">25 лет, водитель трамвая</p>
                     </article>
                     <div class="reviews__control-mobile">
-                      <label for="reviews__one">Первый отзыв</label>
-                      <label for="reviews__two">Второй отзыв</label>
-                      <label for="reviews__three">Третий отзыв</label>
+                      <label>Первый отзыв</label>
+                      <label>Второй отзыв</label>
+                      <label>Третий отзыв</label>
                     </div>
                   </div>
                 </section>
@@ -283,9 +284,9 @@
                       </tr>
                     </table>
                     <div class="tariff__control-mobile">
-                      <label for="tariff__one">Первый тариф</label>
-                      <label for="tariff__two">Второй тариф</label>
-                      <label for="tariff__three">Третий тариф</label>
+                      <label>Первый тариф</label>
+                      <label>Второй тариф</label>
+                      <label>Третий тариф</label>
                     </div>
                   </div>
                 </section>
@@ -312,7 +313,7 @@
                   </div>
                 </section>
                 <section class="map">
-                  <iframe class="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6037872533252!2d30.320858716324643!3d59.938716481876185!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCAxOTExODY!5e0!3m2!1sru!2sru!4v1558356208691!5m2!1sru!2sru" frameborder="0" style="border:0" allowfullscreen></iframe>
+                  <iframe class="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6037872533252!2d30.320858716324643!3d59.938716481876185!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCAxOTExODY!5e0!3m2!1sru!2sru!4v1558356208691!5m2!1sru!2sru" allowfullscreen></iframe>
                   <div class="map__wrapper">
                     <h2 class="visually-hidden">Как до нас добраться</h2>
                   </div>
@@ -366,5 +367,6 @@
         </footer>
     </div>
     <script src="js/app.js"></script>
+    <script src="js/picturefill.min.js"></script>
   </body>
 </html>
