--- a/source/photo.html
+++ b/source/photo.html
@@ -12,7 +12,7 @@
   </head>
   <body>
     <div class="site-wrapper">
-      <div class="page-header">
+      <header class="page-header">
         <div class="main-nav__wrapper-desktop-photo">
           <nav class="main-nav main-nav--closed main-nav--nojs">
             <div class="main-nav__wrapper">
@@ -60,15 +60,16 @@
               <ul class="photo-post__list">
               <li class="photo-post__item">
                 <article class="photo-post__block-panorama">
-                      <picture>
-                        <source type="image/webp" media="(min-width: 1200px)" srcset="img/panorama-desktop@1x.webp 1x, img/panorama-desktop@2x.webp 2x">
-                        <source type="image/webp" media="(min-width: 660px)" srcset="img/panorama-tablet@1x.webp 1x, img/panorama-tablet@2x.webp 2x">
-                        <source type="image/webp" srcset="img/panorama-mobile@1x.webp 1x, img/panorama-mobile@2x.webp 2x">
+                  <h2 class="visually-hidden">Панорама</h2>
+                  <picture>
+                    <source type="image/webp" media="(min-width: 1200px)" srcset="img/panorama-desktop@1x.webp 1x, img/panorama-desktop@2x.webp 2x">
+                    <source type="image/webp" media="(min-width: 660px)" srcset="img/panorama-tablet@1x.webp 1x, img/panorama-tablet@2x.webp 2x">
+                    <source type="image/webp" srcset="img/panorama-mobile@1x.webp 1x, img/panorama-mobile@2x.webp 2x">
 
-                        <source media="(min-width: 1200px)" srcset="img/panorama-desktop@1x.jpg 1x, img/panorama-desktop@2x.jpg 2x">
-                        <source media="(min-width: 660px)" srcset="img/panorama-tablet@1x.jpg 1x, img/panorama-tablet@2x.jpg 2x">
-                        <img class="photo-post__img photo-post__img--panorama" src="img/panorama-mobile@1x.jpg" srcset="img/panorama-mobile@2x.jpg 2x" alt="Фото пользователя">
-                      </picture>
+                    <source media="(min-width: 1200px)" srcset="img/panorama-desktop@1x.jpg 1x, img/panorama-desktop@2x.jpg 2x">
+                    <source media="(min-width: 660px)" srcset="img/panorama-tablet@1x.jpg 1x, img/panorama-tablet@2x.jpg 2x">
+                    <img class="photo-post__img photo-post__img--panorama" src="img/panorama-mobile@1x.jpg" srcset="img/panorama-mobile@2x.jpg 2x" alt="Фото пользователя">
+                  </picture>
                   <div class="photo-post__info">
                     <p class="photo-post__user">Анна&nbsp;<span class="photo-post__time">(5 минут назад)</span></p>
                     <p class="photo-post__description">Прыгать или нет? Напишите в коментарии свой совет и смотрите прямую трансляцию в перископе, задавайте свои вопросы!</p>
@@ -78,6 +79,7 @@
               </li>
               <li class="photo-post__item">
                 <article class="photo-post__block">
+                    <h2 class="visually-hidden">Фото-пост</h2>
                     <picture>
                       <source type="image/webp" media="(min-width: 1200px)" srcset="img/photo-car-desktop@1x.webp 1x, img/photo-car-desktop@2x.webp 2x">
                       <source type="image/webp" media="(min-width: 660px)" srcset="img/photo-car-tablet@1x.webp 1x, img/photo-car-tablet@2x.webp 2x">
@@ -96,6 +98,7 @@
               </li>
               <li class="photo-post__item">
                 <article class="photo-post__block">
+                    <h2 class="visually-hidden">Фото-пост</h2>
                     <picture>
                       <source type="image/webp" media="(min-width: 1200px)" srcset="img/photo-drumset-desktop@1x.webp 1x, img/photo-drumset-desktop@2x.webp 2x">
                       <source type="image/webp" media="(min-width: 660px)" srcset="img/photo-drumset-tablet@1x.webp 1x, img/photo-drumset-tablet@2x.webp 2x">
@@ -114,6 +117,7 @@
               </li>
               <li class="photo-post__item">
                 <article class="photo-post__block">
+                    <h2 class="visually-hidden">Фото-пост</h2>
                     <picture>
                       <source type="image/webp" media="(min-width: 1200px)" srcset="img/photo-window-desktop@1x.webp 1x, img/photo-window-desktop@2x.webp 2x">
                       <source type="image/webp" media="(min-width: 660px)" srcset="img/photo-window-tablet@1x.webp 1x, img/photo-window-tablet@2x.webp 2x">
@@ -132,6 +136,7 @@
               </li>
               <li class="photo-post__item">
                 <article class="photo-post__block">
+                    <h2 class="visually-hidden">Фото-пост</h2>
                     <picture>
                       <source type="image/webp" media="(min-width: 1200px)" srcset="img/photo-fair-desktop@1x.webp 1x, img/photo-fair-desktop@2x.webp 2x">
                       <source type="image/webp" media="(min-width: 660px)" srcset="img/photo-fair-tablet@1x.webp 1x, img/photo-fair-tablet@2x.webp 2x">
@@ -150,6 +155,7 @@
               </li>
               <li class="photo-post__item">
                 <article class="photo-post__block">
+                    <h2 class="visually-hidden">Фото-пост</h2>
                     <picture>
                       <source type="image/webp" media="(min-width: 1200px)" srcset="img/photo-pov-desktop@1x.webp 1x, img/photo-pov-desktop@2x.webp 2x">
                       <source type="image/webp" media="(min-width: 660px)" srcset="img/photo-pov-tablet@1x.webp 1x, img/photo-pov-tablet@2x.webp 2x">
@@ -168,6 +174,7 @@
               </li>
               <li class="photo-post__item">
                 <article class="photo-post__block">
+                    <h2 class="visually-hidden">Фото-пост</h2>
                     <picture>
                       <source type="image/webp" media="(min-width: 1200px)" srcset="img/photo-wing-desktop@1x.webp 1x, img/photo-wing-desktop@2x.webp 2x">
                       <source type="image/webp" media="(min-width: 660px)" srcset="img/photo-wing-tablet@1x.webp 1x, img/photo-wing-tablet@2x.webp 2x">
@@ -207,8 +214,8 @@
                   <img class="photo-editor__img" src="img/photo-road-mobile@1x.jpg" srcset="img/photo-road-mobile@2x.jpg 2x" alt="Фото для редактирования">
                 </picture>
                 <form class="photo-editor__post-tools" method="GET" action="https://echo.htmlacademy.ru">
-                  <legend class="visually-hidden">Обрезание</legend>
                   <fieldset class="photo-editor__instrument photo-editor__crop">
+                    <legend class="visually-hidden">Обрезание</legend>
                     <svg class="photo-editor__icon photo-editor__icon-crop photo-editor__instrument-active" width="48" height="48">
                       <use xlink:href="img/sprite.svg#icon-editor-crop"></use>
                     </svg>
@@ -219,8 +226,8 @@
                       <div class="photo-editor__toggle photo-editor__toggle-crop"></div>
                     </div>
                   </fieldset>
-                  <legend class="visually-hidden">Заливка</legend>
                   <fieldset class="photo-editor__instrument photo-editor__fill">
+                    <legend class="visually-hidden">Заливка</legend>
                     <svg class="photo-editor__icon photo-editor__icon-fill" width="48" height="48">
                       <use xlink:href="img/sprite.svg#icon-editor-fill"></use>
                     </svg>
@@ -231,8 +238,8 @@
                       <div class="photo-editor__toggle photo-editor__toggle-fill"></div>
                     </div>
                   </fieldset>
-                  <legend class="visually-hidden">Контрастность</legend>
                   <fieldset class="photo-editor__instrument photo-editor__contrast">
+                    <legend class="visually-hidden">Контрастность</legend>
                     <svg class="photo-editor__icon photo-editor__icon-contrast" width="32" height="32">
                       <use xlink:href="img/sprite.svg#icon-editor-contrast"></use>
                     </svg>
@@ -302,9 +309,10 @@
               </div>
             </div>
           </footer>
-    </div>
+        </div>
 
     <script src="js/app.js"></script>
+    <script src="js/picturefill.min.js"></script>
 
   </body>
 </html>
