--- a/source/form.html
+++ b/source/form.html
@@ -12,7 +12,7 @@
   </head>
   <body>
     <div class="site-wrapper">
-      <div class="page-header">
+      <header class="page-header">
         <div class="main-nav__wrapper-desktop-form">
           <nav class="main-nav main-nav--closed main-nav--nojs">
             <div class="main-nav__wrapper">
@@ -60,6 +60,7 @@
             </div>
               <form class="history__info" method="post" action="https://echo.htmlacademy.ru">
                 <section class="history__block-general-name">
+                  <h2 class="visually-hidden">Блок ввода имени</h2>
                   <p class="history__block-first history__block-surname">
                     <label class="history__info-label" for="user-surname">Фамилия:</label>
                     <input class="history__info-introduce history__info-surname" id="user-surname" type="text" name="surname" placeholder="Укажите фамилию *">
@@ -74,6 +75,7 @@
                   </p>
                 </section>
                 <section class="history__block-general-app">
+                  <h2 class="visually-hidden">Блок выбора приложения</h2>
                   <fieldset class="history__block-app">
                     <legend class="history__legend">С каким приложением путешествовали?</legend>
                     <ul class="history__list-app">
@@ -93,6 +95,7 @@
                   </fieldset>
                 </section>
                 <section class="history__block-general-contacts">
+                  <h2 class="visually-hidden">Блок ввода контактов</h2>
                   <fieldset class="history__block-contacts">
                     <legend class="history__legend history__legend-mobile">Контактная информация</legend>
                     <div class="history__contacts-wrapper">
@@ -108,6 +111,7 @@
                   </fieldset>
                 </section>
                 <section class="history__block-general-progress">
+                  <h2 class="visually-hidden">Блок выбора экстремального фото</h2>
                   <fieldset class="history__block-progress">
                     <legend class="history__legend history__legend-progress">Ваши безбашенные достижения в путешествии</legend>
                       <ul class="history__list-progress">
@@ -139,12 +143,14 @@
                   </fieldset>
                 </section>
                 <section class="history__block-general-reviews">
+                  <h2 class="visually-hidden">Блок ввода отзыва</h2>
                   <fieldset class="history__block-reviews">
                     <legend class="history__legend history__legend-reviews">Опишите свои эмоции</legend>
                     <textarea class="history-reviews" name="word" placeholder="Можно прям в красках, не стесняясь в выражениях"></textarea>
                   </fieldset>
                 </section>
                 <section class="history__block-button">
+                  <h2 class="visually-hidden">Блок отправки формы</h2>
                   <div class="history__button-wrapper">
                     <button type="submit" class="history__button button__send">Отправить форму</button>
                     <p class="history__important history__important-mobile"><span>* </span>— обязательные поля</p>
@@ -221,5 +227,6 @@
       </div>
     </section>
     <script src="js/app.js"></script>
+    <script src="js/picturefill.min.js"></script>
   </body>
 </html>
