--- a/source/form.html
+++ b/source/form.html
@@ -9,6 +9,11 @@
     <link rel="preload" href="fonts/opensans.woff2" as="font" crossorigin="anonymous">
     <link rel="preload" href="fonts/opensansbold.woff2" as="font" crossorigin="anonymous">
     <link rel="preload" href="fonts/opensanslight.woff2" as="font" crossorigin="anonymous">
+    <script>
+        // Picture element HTML5 shiv
+        document.createElement( "picture" );
+    </script>
+    <script src="js/picturefill.min.js" async></script>
   </head>
   <body>
     <div class="site-wrapper">
@@ -227,6 +232,5 @@
       </div>
     </section>
     <script src="js/app.js"></script>
-    <script src="js/picturefill.min.js"></script>
   </body>
 </html>
