после первой правки

--- a/source/form.html
+++ b/source/form.html
@@ -101,11 +101,11 @@
                     <div class="history__contacts-wrapper">
                       <div class="history__contacts history__contacts-tel">
                         <label class="history__info-label history__label-contacts history__label-tel">Номер телефона</label>
-                        <input class="history__info-introduce history__info-introduce-contacts history__tel" id="user-tel" type="text" name="tel" placeholder="Номер, пожалуйста">
+                        <input class="history__info-introduce history__info-introduce-contacts history__tel" id="user-tel" type="tel" name="tel" placeholder="Номер, пожалуйста">
                       </div>
                       <div class="history__contacts history__contacts-email">
                         <label class="history__info-label history__label-contacts history__label-email">Адрес почты</label>
-                        <input class="history__info-introduce history__info-introduce-contacts history__email" id="user-email" type="text" name="email" placeholder="Введите почту *">
+                        <input class="history__info-introduce history__info-introduce-contacts history__email" id="user-email" type="email" name="email" placeholder="Введите почту *">
                       </div>
                     </div>
                   </fieldset>
