--- a/source/index.html
+++ b/source/index.html
@@ -50,24 +50,24 @@
                 <div class="app-save__block">
                   <p class="app-save__slogan">Взгляните на жизнь иначе!</p>
                   <h2 class="visually-hidden">Скачать приложение</h2>
-                  <button class="app-save__button" type="button">Скачать приложение</button>
+                  <a class="app-save__button" href="www.itunes.com">Скачать приложение</a>
                     <ul class="app-save__os-list">
                       <li class="app-save__item">
-                        <a class="app-save__link">
+                        <a class="app-save__link" href="www.itunes.com">
                           <svg class="app-save__icon-apple" width="56" height="56">
                             <use xlink:href="img/sprite.svg#icon-apple"></use>
                           </svg>
                         </a>
                       </li>
                       <li class="app-save__item">
-                        <a class="app-save__link">
+                        <a class="app-save__link" href="play.google.com">
                           <svg class="app-save__icon-android" width="43" height="48">
                             <use xlink:href="img/sprite.svg#icon-android"></use>
                           </svg>
                         </a>
                       </li>
                       <li class="app-save__item">
-                        <a class="app-save__link">
+                        <a class="app-save__link" href="www.microsoft.com/ru-ru/store/apps/windows-phone">
                           <svg class="app-save__icon-windows" width="44" height="42">
                             <use xlink:href="img/sprite.svg#icon-microsoft"></use>
                           </svg>
