--- a/source/photo.html
+++ b/source/photo.html
@@ -216,7 +216,7 @@
                 <form class="photo-editor__post-tools" method="GET" action="https://echo.htmlacademy.ru">
                   <fieldset class="photo-editor__instrument photo-editor__crop">
                     <legend class="visually-hidden">Обрезание</legend>
-                    <svg class="photo-editor__icon photo-editor__icon-crop photo-editor__instrument-active" width="48" height="48">
+                    <svg class="photo-editor__icon photo-editor__icon-crop photo-editor__instrument-active photo-editor__instrument-active-crop" width="48" height="48">
                       <use xlink:href="img/sprite.svg#icon-editor-crop"></use>
                     </svg>
                     <div class="photo-editor__range-controls photo-editor__range-controls-tablet">
@@ -228,7 +228,7 @@
                   </fieldset>
                   <fieldset class="photo-editor__instrument photo-editor__fill">
                     <legend class="visually-hidden">Заливка</legend>
-                    <svg class="photo-editor__icon photo-editor__icon-fill" width="48" height="48">
+                    <svg class="photo-editor__icon photo-editor__icon-fill photo-editor__instrument-active" width="48" height="48">
                       <use xlink:href="img/sprite.svg#icon-editor-fill"></use>
                     </svg>
                     <div class="photo-editor__range-controls photo-editor__range-controls-tablet">
@@ -240,7 +240,7 @@
                   </fieldset>
                   <fieldset class="photo-editor__instrument photo-editor__contrast">
                     <legend class="visually-hidden">Контрастность</legend>
-                    <svg class="photo-editor__icon photo-editor__icon-contrast" width="32" height="32">
+                    <svg class="photo-editor__icon photo-editor__icon-contrast photo-editor__instrument-active" width="32" height="32">
                       <use xlink:href="img/sprite.svg#icon-editor-contrast"></use>
                     </svg>
                     <div class="photo-editor__range-controls photo-editor__range-controls-tablet photo-editor__range-controls-contrast">
